# zulip-tools

./: Cargo.toml  README.adoc
bash/: stats.sh
src/: main.rs
