[package]
name = "zulip-rust-tools"
version = "0.1.0"
authors = ["Abel Salgado Romero <abelromero@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = { version = "1.0" }
